{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 195,
  "lineage": "4a438326-a77b-3979-3c83-ef1869863727",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:966180254834:instance/i-0255d733532c27dae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-role-server",
            "id": "i-0255d733532c27dae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mlops-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023d331c05ca2cee9",
            "private_dns": "ip-172-31-40-204.ap-south-1.compute.internal",
            "private_ip": "172.31.40.204",
            "public_dns": "ec2-13-233-198-42.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.198.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cb3045352ba03df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-server-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f860b8a704464a8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035da6e621d5f17aa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-instance-role-attach",
            "aws_iam_role.sagemaker_role_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-server-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966180254834:security-group/sg-035da6e621d5f17aa",
            "description": "Allow All Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035da6e621d5f17aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2-server-security-group",
            "name_prefix": "",
            "owner_id": "966180254834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-mysql-security-group"
            },
            "tags_all": {
              "Name": "mlops-mysql-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04988da276151ec45"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:966180254834:security-group/sg-030fd1c59677bf48c",
            "description": "Allow All Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030fd1c59677bf48c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mlops-mysql-security-group",
            "name_prefix": "",
            "owner_id": "966180254834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-mysql-security-group"
            },
            "tags_all": {
              "Name": "mlops-mysql-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04988da276151ec45"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}